--- a/client/package.json
+++ b/client/package.json
@@ -7,15 +7,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "effector": "^22.1.2",
     "effector-react": "^22.0.6",
+    "i18next": "^21.6.6",
+    "path": "^0.12.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/styled-components": "^5.1.20",
     "@vitejs/plugin-react": "^1.0.7",
+    "lib-flexible": "^0.3.2",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
   }
