--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "effector": "^22.1.2",
     "effector-react": "^22.0.6",
     "i18next": "^21.6.6",
+    "i18next-browser-languagedetector": "^6.1.2",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.3",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
